test npm publish t

--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -2,7 +2,7 @@ name: Player And Plugin Release Version QA
 on:
   workflow_call:
     secrets:
-      NPM_JFROG_TOKEN:
+      NPM_JFROG_FULL_CRED:
         required: true
     inputs:
       yarn-run-to-execute:
@@ -54,7 +54,11 @@ jobs:
         run: yarn run build
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
-      - run: yarn publish --verbose
+      - run: |
+          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/_temp/.npmrc
+          curl -u${{ secrets.NPM_JFROG_FULL_CRED }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/_temp/.npmrc
+          cat /home/runner/work/_temp/.npmrc
+          yarn publish --verbose
 
 
 
