--- a/.github/workflows/run_upload_packages.yaml
+++ b/.github/workflows/run_upload_packages.yaml
@@ -11,6 +11,7 @@ jobs:
     uses: kaltura/playkit-js-youbora/.github/workflows/upload_packages.yaml@devops-tests
     secrets:
       NPM_JFROG_FULL_CRED: ${{ secrets.NPM_JFROG_FULL_CRED }}
+      NPM_JFROG_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
     with:
       yarn-run-to-execute: '"release"'
       npm-registry-url: 'https://kalturaa.jfrog.io/artifactory/api/npm/dor-test-nodejs-virtual/'
