--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -4,6 +4,8 @@ on:
     secrets:
       NPM_JFROG_FULL_CRED:
         required: true
+      NPM_JFROG_TOKEN:
+        required: true
     inputs:
       yarn-run-to-execute:
         description: "list of package.json scripts - example: 'eslint flow test'"
@@ -55,11 +57,6 @@ jobs:
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
       - run: |
-          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/_temp/.npmrc
-          curl -u$NPM_JFROG_FULL_CRED https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/_temp/.npmrc
-          cat /home/runner/work/_temp/.npmrc
           yarn publish --verbose
-        env:
-          NPM_JFROG_FULL_CRED: ${{ secrets.NPM_JFROG_FULL_CRED }}
 
 
