test upload to jfrog

--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -4,8 +4,6 @@ on:
     secrets:
       NPM_JFROG_FULL_CRED:
         required: true
-      NPM_JFROG_TOKEN:
-        required: true
     inputs:
       yarn-run-to-execute:
         description: "list of package.json scripts - example: 'eslint flow test'"
@@ -33,30 +31,6 @@ jobs:
           registry-url: ${{ inputs.npm-registry-url }}
           always-auth: true
           token: ${{ secrets.NPM_JFROG_TOKEN }}
-      - name: Yarn install
-        run: yarn install
-      - name: Yarn run ${{ inputs.yarn-run-to-execute }}
-        run: |
-          git config --global user.email "ovp.cp@kaltura.com"
-          git config --global user.name "ovp-github-actions"
-          for command in ${{ inputs.yarn-run-to-execute }}; do
-            yarn run $command
-          done
-      - name:
-        run: |
-          sha=$(echo "${GITHUB_SHA::7}")
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          newVersion="${currentVersion}-${sha}"
-          echo "New version ${newVersion}"
-          sed -iE "s/${currentVersion}/${newVersion}/g" package.json
-          sed -iE "s/${currentVersion}/${newVersion}/g" CHANGELOG.md
-          rm package.jsonE
-          rm CHANGELOG.mdE
-      - name: Yarn run build
-        run: yarn run build
-        env:
-          NODE_OPTIONS: "--openssl-legacy-provider"
-      - run: |
-          npm config set _auth ${{ secrets.NPM_JFROG_TOKEN }}
-          yarn publish --verbose
+      - run: env
+
 
