--- a/.github/workflows/run_upload_packages.yaml
+++ b/.github/workflows/run_upload_packages.yaml
@@ -10,8 +10,8 @@ jobs:
   release-version-qa:
     uses: kaltura/playkit-js-youbora/.github/workflows/upload_packages.yaml@devops-tests
     secrets:
-      NPM_JFROG_FULL_CRED: ${{ secrets.NPM_JFROG_FULL_CRED }}
-      NPM_JFROG_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
+      NPM_JFROG_USER: ${{ secrets.NPM_JFROG_USER }}
+      NPM_JFROG_PASS: ${{ secrets.NPM_JFROG_PASS }}
     with:
       yarn-run-to-execute: '"release"'
       npm-registry-url: 'https://kalturaa.jfrog.io/artifactory/api/npm/dor-test-nodejs-virtual/'
