--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -38,7 +38,8 @@ jobs:
       - name: List s3
         id: accounts
         run: |
-          echo "aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text)" >> $GITHUB_OUTPUT
+          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text)
+          echo "aws_envs=${aws_envs}" >> $GITHUB_OUTPUT
       - name: Test
         run: |
           echo ${{ steps.accounts.outputs.aws_envs }}
