--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -39,7 +39,5 @@ jobs:
         id: accounts
         run: |
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text)
-          echo "aws_envs=${aws_envs}" >> $GITHUB_OUTPUT
-      - name: Test
-        run: |
-          echo ${{ steps.accounts.outputs.aws_envs }}
+          echo $aws_envs
+
