--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -36,8 +36,10 @@ jobs:
           role-session-name: githubAction
           aws-region: "us-east-1"
       - name: List s3
+        id: accounts
         run: |
-          aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text > accounts.txt
+          aws_envs='[{"env":"nvd1","account_id":"1234","region":"us-east-1"},{"env":"nvq1","account_id":"4321","region":"us-east-1"}]'
+          echo "aws_envs=$aws_envs" >> $GITHUB_OUTPUT
       - name: Test
         run: |
-          jq -c '.[]' accounts.txt | while read i; do env=$(jq -r '.env' <<< "$i"); account_id=$(jq -r '.account_id' <<< "$i"); region=$(jq -r '.region' <<< "$i"); echo "::add-mask::$account_id"; echo "env=$env, account_id=$account_id, region=$region"; done
+          echo ${{ steps.accounts.outputs.aws_envs }}
