--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -19,7 +19,7 @@ jobs:
         test: '{"include":[{"project":"foo","config":"Debug"},{"project":"bar","config":"Release"}]}'
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ matrix.project }}
-      - run: echo ${{ matrix.config }}
+      - run: echo ${{ matrix.test.project }}
+      - run: echo ${{ matrix.test.config }}
 
 
