--- a/.github/workflows/run_upload_to_s3.yaml
+++ b/.github/workflows/run_upload_to_s3.yaml
@@ -1,19 +1,65 @@
-## CI - Release Version
-name: Upload to s3 QA
-
+name: Player And Plugin Release Version QA
 on:
-  pull_request:
-    branches:
-      - devops-pr
+  workflow_call:
+    secrets:
+      CENTRAL_ACCOUNT_ID:
+        required: true
+      S3_BUCKET_APPS:
+        required: true
+    inputs:
+      aws-secret-central:
+        description: "secret in central that include all the account ids"
+        required: true
+        type: string
 
 jobs:
-  upload-to-s3-qa:
-    uses: kaltura/playkit-js-youbora/.github/workflows/upload_to_s3_test.yaml@devops-tests
-    secrets:
-      CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
-      S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
-    with:
-      aws-secret-central: '"dor-test-github-actions"'
-
+  get-accounts:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [ 17.x ]
+    runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: write
+      contents: read
+    outputs:
+      aws_envs: ${{ steps.accounts.outputs.aws_envs }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/dor-test-oidc-github-actions
+          role-session-name: githubAction
+          aws-region: "us-east-1"
+      - name: List s3
+        id: accounts
+        run: |
+          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
+          echo $aws_envs | jq -c '.[]' | while read i; do account_id=$(jq -r '.account_id' <<< "$i"); echo "::add-mask::$account_id"; done
+          echo "aws_envs={\"include\":$aws_envs}" >> $GITHUB_OUTPUT
+      - name: Test
+        run: |
+          echo '${{ steps.accounts.outputs.aws_envs }}' | jq -c '.[]' | while read i; do
+            env=$(jq -r '.env' <<< "$i"); account_id=$(jq -r '.account_id' <<< "$i");
+            region=$(jq -r '.region' <<< "$i"); echo "::add-mask::$account_id";
+            echo "env=$env, account_id=$account_id, region=$region";
+          done
+  upload-to-s3:
+    strategy:
+      matrix: ${{fromJson(needs.job1.outputs.matrix)}}
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - run: echo ${{ matrix.env }}
+      - run: echo ${{ matrix.account_id }}
+      - run: echo ${{ matrix.region }}
 
 
