--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -41,8 +41,7 @@ jobs:
         id: accounts
         run: |
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
-          echo $aws_envs | jq -c '.[]' | while read i; do account_id=$(jq -r '.account_id' <<< "$i"); echo "::add-mask::$account_id"; done
-          echo "aws_envs={\"include\":$aws_envs}" >> $GITHUB_OUTPUT
+          echo "aws_envs=$aws_envs" >> $GITHUB_OUTPUT
   upload-to-s3:
     strategy:
       matrix: ${{fromJson(needs.job1.outputs.matrix)}}
