--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -43,8 +43,9 @@ jobs:
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
           echo "aws_envs=$aws_envs" >> $GITHUB_OUTPUT
   upload-to-s3:
+    needs: get-accounts
     strategy:
-      matrix: ${{fromJson(needs.job1.outputs.matrix)}}
+      matrix: ${{fromJson(needs.get-accounts.outputs.aws_envs)}}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
