--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -42,6 +42,7 @@ jobs:
         run: |
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
           echo $aws_envs | jq -c '.[]' | while read i; do env=$(jq -r '.env' <<< "$i"); accounts+="$env " ; done
+          echo $accounts
           echo "accounts=$accounts" >> $GITHUB_OUTPUT
   upload-to-s3:
     needs: get-accounts
