--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -41,20 +41,19 @@ jobs:
         id: accounts
         run: |
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
-          echo $aws_envs | jq -c '.[]' | while read i; do env=$(jq -r '.env' <<< "$i"); accounts+="$env " ; done
+          accounts=$(echo $aws_envs | jq -c '.[]' | while read i; do jq -n --arg env "$(jq -r '.env' <<< "$i")" '{"env": $env}' ; done)
           echo $accounts
-          echo "accounts=$accounts" >> $GITHUB_OUTPUT
+          echo "accounts={\"include\":$accounts}" >> $GITHUB_OUTPUT
   upload-to-s3:
     needs: get-accounts
     strategy:
-      matrix:
-        accounts: ${{fromJSON(needs.get-accounts.outputs.accounts)}}
+      matrix: ${{fromJSON(needs.get-accounts.outputs.accounts)}}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     steps:
-      - run: echo ${{ matrix.accounts }}
+      - run: echo ${{ matrix.env }}
 
 
 
