--- a/.github/workflows/upload_to_s3_test.yaml
+++ b/.github/workflows/upload_to_s3_test.yaml
@@ -60,13 +60,23 @@ jobs:
           role-session-name: githubAction
           aws-region: "us-east-1"
       - name: List s3
-        id: accounts
+        id: specific_account
         run: |
           aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
           echo $aws_envs | jq -c '.[]' | while read i; do account_id=$(jq -r '.account_id' <<< "$i"); echo "::add-mask::$account_id"; done
-          echo "accounts=$aws_envs" >> $GITHUB_OUTPUT
+          specific_account=$(echo $aws_envs | jq -c '.[] | select(.env | contains("${{ matrix.env }}"))')
+          echo "specific_account=$specific_account" >> $GITHUB_OUTPUT
       - run: |
-          echo '${{ steps.accounts.outputs.accounts }}' | jq -c '.[] | select(.env | contains("${{ matrix.env }}"))'
+        id: account_id
+          account_id=$(echo '${{ steps.specific_account.outputs.specific_account }}' | jq '.account_id')
+          echo $account_id
+          echo "account_id=$account_id" >> $GITHUB_OUTPUT
+      - run: |
+        id: region
+          region=$(echo '${{ steps.specific_account.outputs.specific_account }}' | jq '.region')
+          echo $region
+          echo "region=$region" >> $GITHUB_OUTPUT
+
 
 
 
