--- a/.github/workflows/run_upload_to_s3.yaml
+++ b/.github/workflows/run_upload_to_s3.yaml
@@ -8,12 +8,13 @@ on:
 
 jobs:
   upload-to-s3-qa:
-    uses: kaltura/playkit-js-youbora/.github/workflows/upload_to_s3_test.yaml@devops-tests
+    uses: kaltura/playkit-js-youbora/.github/workflows/upload_to_s3.yaml@devops-tests
     secrets:
       CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
       S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
     with:
       aws-secret-central: '"dor-test-github-actions"'
+      kind: "plugin"
 
 
 
