test upload to s3

--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -114,6 +114,7 @@ jobs:
           echo "New version ${newVersion}"
 
           s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${pluginName}/${newVersion}"
+          aws s3 ls s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/
           aws s3 cp dist/ ${s3Path} --recursive --exclude "*" --include "${pluginName}.js*"
           if [ -d 'translations' ]; then
              aws s3 cp translations/ ${s3Path}/translations --recursive --include "*"
